Revert "Cleaned up formatting of base gameboard so that the gameboard no longer overlaps with the navbar"
This reverts commit 32d6c9ef5e57f122ece0126ce761a0e9d0f97702.

--- a/frontend/src/components/Gameboard.css
+++ b/frontend/src/components/Gameboard.css
@@ -1,6 +1,5 @@
 #gameboard {
-    text-align: center;
-    margin-top: 5.5%;
+    text-align: center
 }
 
 #block_display {
