--- a/frontend/src/components/Gamepage.css
+++ b/frontend/src/components/Gamepage.css
@@ -149,6 +149,7 @@ top: 15px;
 }
 
 #Gamegrid {
+position:absolute;
 bottom: 240px;
 margin-right: auto;
 margin-left: auto;
